2004-08-02  MenTaLguY  <mental@rydia.net>

	* configure.in: sigc++ 2.0.2 (and before?) has a bug that
	  causes us to crash.  require >= 2.0.3

	* src/Makefile.am, src/Makefile_insert, src/gc-core.h,
	  src/gc-object.h, src/algorithms/longest-common-suffix.h,
	  src/traits/list.h, src/traits/reference.h, src/util/flip.h,
	  src/util/fold.h, src/util/list-iterator.h, src/util/list.h,
	  src/util/map.h, src/util/parent-axis.h, src/util/reverse.h,
	  src/util/sibling-axis.h, src/util/tuple.h, src/util/zip.h:

	  more "functional" work

2004-08-02  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/display/curve.cpp, src/display/curve.h:
	  Greater conformance with CodingStyle.

2004-07-31  David Turner

	* dialogs/xml-tree.cpp: Improved focus, added keystroke for attr commit.

2004-07-31  Ted Gould  <ted@gould.cx>

	* src/extension/extension.cpp,
	src/extension/implementation/implementation.cpp,
	src/extension/implementation/implementation.h,
	src/extension/implementation/script.cpp,
	src/extension/implementation/script.h, src/extension/internal/eps-out.cpp,
	src/extension/internal/eps-out.h:

	Okay, changed the prefs_ prototypes to include which extension they are
	working with. This should clean up some warnings before they become
	problems later.

2004-07-31  Ted Gould  <ted@gould.cx>

	* src/print.cpp, src/extension/extension.cpp, src/extension/extension.h,
	  src/extension/internal/eps-out.cpp, src/extension/internal/ps.cpp:

	  Changed the get and set param prototypes so that they aren't overloaded
	  anymore - this was flaky.  Also added a document to the prototype so
	  that document specific parameters can be supported in the future.

2004-07-28  David Turner

	* sp-gradient.cpp, widgets/gradient-vector.cpp: fixed gradient handling to
	properly render gradients with sharp color boundaries

2004-07-29  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/inkview.cpp: Make the window title be the name of the